--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@types/node": "^13.13.5",
+    "@types/react": "^16.9.35",
+    "autoprefixer": "^9.7.6",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.4.6",
+    "typescript": "^3.8.3"
   }
 }
