--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@next/bundle-analyzer": "^9.4.0",
+    "@types/classnames": "^2.2.10",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
     "autoprefixer": "^9.7.6",
