--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "contentful:generate-types": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts "
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "next": "9.4.0",
+    "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
@@ -22,6 +24,8 @@
     "@types/react": "^16.9.35",
     "autoprefixer": "^9.7.6",
     "contentful": "^7.14.4",
+    "contentful-management": "^5.26.3",
+    "contentful-typescript-codegen": "^3.2.1",
     "dotenv": "^8.2.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
