--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "marked": "^1.1.0",
+    "moment": "^2.26.0",
     "next": "9.4.0",
-    "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
@@ -20,6 +21,7 @@
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@next/bundle-analyzer": "^9.4.0",
     "@types/classnames": "^2.2.10",
+    "@types/marked": "^0.7.4",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
     "autoprefixer": "^9.7.6",
@@ -29,6 +31,7 @@
     "dotenv": "^8.2.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.5",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.2"
   }
