--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "contentful:generate-types": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts ",
+    "contentful:export-content": "exit 1",
     "generate-barrels": "barrelsby --delete --directory './src/components'"
   },
   "dependencies": {
     "algoliasearch": "^4.2.0",
     "classnames": "^2.2.6",
-    "instantsearch.js": "^4.5.0",
     "marked": "^1.1.0",
     "moment": "^2.26.0",
     "next": "9.4.0",
