--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-barrels": "barrelsby --delete --directory './src/components'"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^13.4.0",
     "algoliasearch": "^4.2.0",
     "classnames": "^2.2.6",
     "marked": "^1.1.0",
