--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@fullhuman/postcss-purgecss": "^2.2.0",
     "@next/bundle-analyzer": "^9.4.0",
     "@types/algoliasearch": "^3.34.10",
     "@types/classnames": "^2.2.10",
@@ -39,6 +40,8 @@
     "contentful-typescript-codegen": "^3.2.1",
     "cypress": "^4.7.0",
     "dotenv": "^8.2.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.2"
