--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "contentful-typescript-codegen": "^3.2.1",
     "cypress": "^4.7.0",
     "dotenv": "^8.2.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
