--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:analyse": "ANALYZE=true next build",
     "start": "next start",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
@@ -18,7 +19,6 @@
     "algoliasearch": "^4.2.0",
     "classnames": "^2.2.6",
     "marked": "^1.1.0",
-    "moment": "^2.26.0",
     "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@fullhuman/postcss-purgecss": "^2.2.0",
-    "@next/bundle-analyzer": "^9.4.0",
+    "@next/bundle-analyzer": "^9.4.4",
     "@types/algoliasearch": "^3.34.10",
     "@types/classnames": "^2.2.10",
     "@types/marked": "^0.7.4",
