--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^13.4.0",
+    "@sentry/browser": "^5.15.5",
     "algoliasearch": "^4.2.0",
     "classnames": "^2.2.6",
     "marked": "^1.1.0",
@@ -28,11 +29,13 @@
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@fullhuman/postcss-purgecss": "^2.2.0",
     "@next/bundle-analyzer": "^9.4.4",
+    "@sentry/webpack-plugin": "^1.11.1",
     "@types/algoliasearch": "^3.34.10",
     "@types/classnames": "^2.2.10",
     "@types/marked": "^0.7.4",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
     "autoprefixer": "^9.7.6",
     "barrelsby": "^2.2.0",
     "chromatic": "^4.0.3",
