simplify env config

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ CONTENTFUL_ACCESS_TOKEN=
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=
 CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=
 CONTENTFUL_ENVIRONMENT=
-ALGOLIA_APP_ID=
-ALGOLIA_SEARCH_ONLY_API_KEY=
-ALGOLIA_INDEX=
-GA_TRACKING_ID=
-SENTRY_DSN=
+NEXT_PUBLIC_ALGOLIA_APP_ID=
+NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_API_KEY=
+NEXT_PUBLIC_ALGOLIA_INDEX=
+NEXT_PUBLIC_GA_TRACKING_ID=
+NEXT_PUBLIC_SENTRY_DSN=
