--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "algoliasearch": "^4.2.0",
     "classnames": "^2.2.6",
     "marked": "^1.1.0",
-    "next": "9.4.0",
+    "next": "^9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
