--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ CONTENTFUL_ACCESS_TOKEN=
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=
 CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=
 CONTENTFUL_ENVIRONMENT=
-CLOUDFLARE_API_KEY=
+CF_API_KEY=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_API_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX=
