--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,10 @@ jobs:
       - name: Node install
         shell: bash -l {0}
         run: nvm install
-      - run: npm install
+      - run: |
+          npm install
+          npm run predeploy
       - name: Deploy
-        run: npm run deploy
-        env:
-          CF_API_KEY: ${{ secrets.CF_API_KEY }}
+        uses: cloudflare/wrangler-action@1.1.0
+        with:
+          apiToken: ${{ secrets.CF_API_KEY }}
