--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,7 @@ jobs:
       - run: npm install
       - run: npm run build:static
       - name: sanity
-        with:
-          entrypoint: /bin/echo
-          args: ${{ github.event.pull_request.head.sha }}
-
+        run: echo ${{ github.event.pull_request.head.sha }}
       - name: Run Lighthouse audit
         run: npx @lhci/cli@0.4.x autorun
         env:
