--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         shell: bash -l {0}
         run: nvm install
       - run: |
-          npm install
+          npm ci
           npm run predeploy
       - name: Deploy
         uses: cloudflare/wrangler-action@1.1.0
