--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Node install
         shell: bash -l {0}
-        run: nvm install
+        run: |
+          nvm install
+          nvm use
       - run: |
           npm ci
           npm run predeploy
