containerise preview server

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "build:static": "next build && next export",
     "build:analyse": "ANALYZE=true next build",
+    "start": "next start",
     "predeploy": "rm -rf ./out && npm run build:static && rm -rf ./out/__next/static/development",
     "deploy": "wrangler publish",
-    "start": "next start",
+    "docker:build": "docker build -t faux-site .",
+    "docker:run": "docker run --env-file .env.local --rm -it -p 3000:3000 faux-site",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "cypress:run:customer-journeys": "cypress run --spec 'cypress/integration/customer-journeys/**/*'",
