ci: only run CI workflow on PRs against master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI
 on:
   pull_request:
     types: [opened, synchronize]
+    branches:
+      - master
   push:
     branches:
       - master
