--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "build:static": "next build && next export",
     "build:analyse": "ANALYZE=true next build",
     "start": "next start",
+    "test": "jest --coverage",
+    "test:ci": "jest --coverage --max-workers=2 --ci",
+    "test:watch": "jest --coverage --watch",
+    "format": "prettier --write '{src,lib,scripts,cypress}/**/*.{tsx,ts,js}'",
+    "format:check": "prettier --check '{src,lib,scripts,cypress}/**/*.{tsx,ts,js}'",
+    "lint": "",
+    "lint:fix": "",
     "predeploy": "rm -rf ./out && npm run build:static && rm -rf ./out/__next/static/development",
     "deploy": "wrangler publish",
     "docker:build": "docker build -t faux-site .",
@@ -45,7 +52,6 @@
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "autoprefixer": "^9.7.6",
     "barrelsby": "^2.2.0",
-    "chromatic": "^4.0.3",
     "contentful": "^7.14.4",
     "contentful-export": "^7.9.15",
     "contentful-import": "^7.8.0",
@@ -53,11 +59,21 @@
     "contentful-typescript-codegen": "^3.2.1",
     "cypress": "^4.7.0",
     "dotenv": "^8.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.9",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{src,lib,scripts,cypress}/**/*.{tsx,ts,js}": "prettier --write"
   }
 }
