--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test": "jest --coverage",
     "test:ci": "jest --coverage --max-workers=2 --ci",
     "test:watch": "jest --coverage --watch",
-    "format": "prettier --write '{src,lib,scripts,cypress}/**/*.{tsx,ts,js}'",
-    "format:check": "prettier --check '{src,lib,scripts,cypress}/**/*.{tsx,ts,js}'",
-    "lint": "",
-    "lint:fix": "",
+    "test:prod": "npm run format:check && npm run eslint && npx tsc --noEmit",
+    "format": "prettier --write '{src,scripts,cypress}/**/*.{tsx,ts,js}'",
+    "format:check": "prettier --check '{src,scripts,cypress}/**/*.{tsx,ts,js}'",
+    "lint": "eslint --quiet 'src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'",
     "predeploy": "rm -rf ./out && npm run build:static && rm -rf ./out/__next/static/development",
     "deploy": "wrangler publish",
     "docker:build": "docker build -t faux-site .",
@@ -23,8 +24,8 @@
     "cypress:run": "cypress run",
     "cypress:run:customer-journeys": "cypress run --spec 'cypress/integration/customer-journeys/**/*'",
     "contentful:generate-types": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts ",
-    "contentful:export-content": "node ./contentful/contentful-export.js",
-    "contentful:import-content": "node ./contentful/contentful-import.js",
+    "contentful:export-content": "node ./scripts/contentful-export.js",
+    "contentful:import-content": "node ./scripts/contentful-import.js",
     "generate-barrels": "barrelsby --delete --directory './src/components' --location below",
     "lchi:deploy": "git subtree push --prefix lhci-server heroku master"
   },
@@ -49,6 +50,8 @@
     "@types/marked": "^0.7.4",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "autoprefixer": "^9.7.6",
     "barrelsby": "^2.2.0",
@@ -59,6 +62,8 @@
     "contentful-typescript-codegen": "^3.2.1",
     "cypress": "^4.7.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
     "postcss-flexbugs-fixes": "^4.2.1",
@@ -74,6 +79,7 @@
     }
   },
   "lint-staged": {
-    "{src,lib,scripts,cypress}/**/*.{tsx,ts,js}": "prettier --write"
+    "{src,scripts,cypress}/**/*.{tsx,ts,js}": "prettier --write",
+    "{src}/**/*.{tsx,ts,js}": "eslint --fix"
   }
 }
