--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Node install
         shell: bash -l {0}
-        run: nvm install
+        run: |
+          nvm install
+          nvm use
       - run: |
           npm ci
           npm run format:check
@@ -40,7 +42,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Node install
         shell: bash -l {0}
-        run: nvm install
+        run: |
+          nvm install
+          nvm use
       - name: Run Cypress
         uses: cypress-io/github-action@v1
         with:
@@ -55,7 +59,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Node
         shell: bash -l {0}
-        run: nvm install
+        run: |
+          nvm install
+          nvm use
       - run: npm ci
       - run: npm run build:static
       - name: Run Lighthouse audit
