setup preview mode

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ CONTENTFUL_ACCESS_TOKEN=
 CONTENTFUL_PREVIEW_ACCESS_TOKEN=
 CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=
 CONTENTFUL_ENVIRONMENT=
+PREVIEW_TOKEN=
 CF_API_KEY=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_API_KEY=
