deploy Worker to faux.digital, manage non-sensitive CF config in env vars

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=
 CONTENTFUL_ENVIRONMENT=
 PREVIEW_TOKEN=
 CF_API_KEY=
+CF_ACCOUNT_ID=
+CF_ZONE_ID=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_ONLY_API_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX=
