--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,11 @@ jobs:
     name: "Deploy to Cloudflare Workers"
     runs-on: ubuntu-latest
     steps:
+      - name: Cache Next bundles between builds
+        uses: actions/cache@v1
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Node install
