CF worker config adjustments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,14 @@ jobs:
         run: |
           nvm install
           nvm use
-      - run: |
+      - name: Predeploy
+        run: |
           npm ci
           npm run predeploy
           sed -i s/{{CF_ACCOUNT_ID}}/${{ secrets.CF_ACCOUNT_ID }}/g wrangler.toml
           sed -i s/{{CF_ZONE_ID}}/${{ secrets.CF_ZONE_ID }}/g wrangler.toml
-          cat wrangler.toml
       - name: Deploy
         uses: cloudflare/wrangler-action@1.1.0
         with:
           apiToken: ${{ secrets.CF_API_KEY }}
+          environment: "production"
