--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy": "wrangler publish",
     "docker:build": "docker build -t faux-site .",
     "docker:run": "docker run --env-file .env.local --rm -it -p 3000:3000 faux-site",
+    "gcp:build-image": "gcloud builds submit --tag gcr.io/faux-279810/marketing-site",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "cypress:run:customer-journeys": "cypress run --spec 'cypress/integration/customer-journeys/**/*'",
