--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,9 +61,10 @@ jobs:
             ${{ needs.vercel_deploy.outputs.preview_url }}/login
             ${{ needs.vercel_deploy.outputs.preview_url }}/release-notes
             ${{ needs.vercel_deploy.outputs.preview_url }}/cards
-          configPath: "./lighthouserc.js"
+          configPath: ./lighthouserc.js
+          serverBaseUrl: ${{ secrets.LHCI_SERVER_BASE_URL }}
+          serverToken: ${{ secrets.LHCI_BUILD_TOKEN }}
         env:
-          LHCI_BUILD_TOKEN: ${{ secrets.LHCI_BUILD_TOKEN }}
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
   a11y:
     name: A11y audit
