add Cypress plugin to ESLint

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test:prod": "npm run format:check && npm run eslint && npx tsc --noEmit",
     "format": "prettier --write '{src,scripts,cypress}/**/*.{tsx,ts,js}'",
     "format:check": "prettier --check '{src,scripts,cypress}/**/*.{tsx,ts,js}'",
-    "lint": "eslint --quiet 'src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "lint": "eslint --quiet '{src,cypress}/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --fix '{src,cypress}/**/*.{ts,tsx}'",
     "predeploy": "rm -rf ./out && npm run build:static && rm -rf ./out/_next/static/development",
     "deploy": "wrangler publish",
     "docker:build": "docker build -t faux-site .",
@@ -65,6 +65,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "globby": "^11.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
