--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-filenames": "^1.3.2",
     "globby": "^11.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
