format tailwind class ordering via `Headwind`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "allowUnreachableCode": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
+    "noImplicitReturns": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
