--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
+    "schema-dts": "^0.6.0",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
   },
