--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "globby": "^11.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
